--- a/src/app/views/auth/signup.njk
+++ b/src/app/views/auth/signup.njk
@@ -1,5 +1,34 @@
 {% extends "_layouts/auth.njk" %}
 
 {% block body %}
-  <h1>Hello World</h1>
+  <form action="/signup" method="post">
+    <label for="avatar">
+      <img src="/images/avatar.svg" alt="avatar" height="24" />
+    </label>
+
+    <input type="file" name="avatar" id="avatar" />
+
+    <input type="text" name="name" placeholder="Nome Completo" />
+    <input type="email" name="email" placeholder="Seu e-mail" />
+    <input type="password" name="password" placeholder="Senha" autocomplete />
+
+    <label for="provider">
+      <input type="checkbox" name="provider" id="provider" value="1" />
+      Sou cabeleireiro
+    </label>
+
+    <button type="submit">Criar conta</button>
+
+    <a href="/">Já possuo conta</a>
+  </form>
+
+  <script type="text/javascript">
+    var avatarInput = document.getElementById('avatar')
+    var img = document.querySelector('label[for=avatar] img')
+
+    avatarInput.onchange = function(e) {
+      img.classList.add('preview')
+      img.src = URL.createObjectURL(e.target.files[0])
+    }
+  </script>
 {% endblock %}
