--- a/src/app/views/dashboard.njk
+++ b/src/app/views/dashboard.njk
@@ -9,7 +9,7 @@
       {% for provider in providers %}
         <li class="provider">
           <div>
-            <img src="" alt="photo">
+            <img src="/files/{{ provider.avatar }}" alt="photo">
             <strong>{{ provider.name }}</strong>
           </div>
           <a href="">+</a>
