--- a/src/app/views/_partials/head.njk
+++ b/src/app/views/_partials/head.njk
@@ -6,8 +6,8 @@
   <title>GoBarber</title>
 
   <link rel="stylesheet" href="/styles.css" />
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"/>
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-
 </head>
