Add schedule view/controller

--- a/src/app/views/dashboard.njk
+++ b/src/app/views/dashboard.njk
@@ -16,6 +16,11 @@
         </li>
       {% endfor %}
     </ul>
+
+    {% if (user.provider === true) %}
+      <a href="/app/schedule" class="schedule-button">Meus agendamentos</a>
+    {% endif %}
+
   <a href="/app/logout" class="logout" >Sair</a>
   </div>
 {% endblock %}
