--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -287,6 +287,23 @@ ul.providers {
   margin-top: 5px;
 }
 
-.main-wrapper .content form button:hover {
+.main-wrapper .content form button:hover,
+.schedule-button:hover {
   background: #634dac;
+}
+
+.schedule-button {
+  width: 100%;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+  font-weight: bold;
+  font-size: 14px;
+  border: 0;
+  color: #fff;
+  background: #7159c1;
+  margin-bottom: 20px;
+  text-decoration: none;
 }
